--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 
 :root {
   button[type="button-styles"],
+  button[type="submit"],
   a[type="button-styles"] {
     @apply my-2 bg-blue-400 text-white  hover:bg-white hover:text-blue-400 border border-blue-400 font-bold py-3 px-6 rounded flex align-middle justify-center text-center leading-4;
   }
